--- a/views/principal.erb
+++ b/views/principal.erb
@@ -7,7 +7,7 @@
     <br>
     
     <form action="/crearTabla">
-        <input class="btn btn-primary" type="submit" value="Crear Tabla">
+        <input class="btn btn-primary" type="submit" value="Crear Terreno">
     </form>
     <form action="/ubicaRobot">
         <input class="btn btn-primary" type="submit" value="Robot">
