--- a/views/ubicaRobot.erb
+++ b/views/ubicaRobot.erb
@@ -19,7 +19,7 @@
 
     </form>
     <form action="/principal">
-        <input class="btn btn-primary"  type="submit" value="Ir pagina principal">
+        <input class="btn btn-primary"  type="submit" value="home">
     </form>
 </div>
 
