--- a/views/crearTabla.erb
+++ b/views/crearTabla.erb
@@ -15,7 +15,7 @@
         <br>
     </form>
     <form action="/principal">
-        <input class="btn btn-primary" type="submit" value="Ir pagina principal">
+        <input class="btn btn-primary" type="submit" value="home">
     </form>
 </div>
 
