--- a/views/movimientos.erb
+++ b/views/movimientos.erb
@@ -16,7 +16,7 @@
         <input class="btn btn-primary" type='submit' value ='ejecutar'>
     </form>
     <form action="/principal">
-        <input class="btn btn-primary" type="submit" value="Ir pagina principal">
+        <input class="btn btn-primary" type="submit" value="home">
     </form>
 </div>
 
