--- a/views/saludo.erb
+++ b/views/saludo.erb
@@ -12,7 +12,11 @@
     </form>
 </div>
 <style type="text/css" media="screen">
-
+{% if $limite==3%}
+    <%avan()%>
+    <%izq()%>
+    <%der()%>
+{%endif%}
 body {
     background-image: url("http://files.all-free-download.com//downloadfiles/wallpapers/1920_1080/wall_e_game_4256.jpg");
     background-position: center;
