--- a/views/ubicaRobot.erb
+++ b/views/ubicaRobot.erb
@@ -25,7 +25,11 @@
     </form>
     
 </div>
-
+{% if $limite==3%}
+    <%avan()%>
+    <%izq()%>
+    <%der()%>
+{%endif%}
 
 <style type="text/css" media="screen">
 
