--- a/views/principal.erb
+++ b/views/principal.erb
@@ -32,9 +32,11 @@
     </div>
 
 </div>
-<%avan()%>
-<%izq()%>
-<%der()%>
+{% if $limite==3%}
+    <%avan()%>
+    <%izq()%>
+    <%der()%>
+{%endif%}
 <style type="text/css" media="screen">
 
 body {
